--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,177 +1,514 @@
-
-h1 {
-    background-color: rgba(36, 36, 36, 0.8);
-    width: 50%;
-    border-radius: 5px 10px 10px 5px;
-    padding: 20px;
-}
-
-body {
-    background-image: url("/img/background.jpg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    width: 100%;
-    color: white;
-    background-attachment: fixed;
-    overflow: none;
-}
-
-.nav-content{
-   padding: 10%; 
-}
-.navbar{
-
-    float: left;
-    display: list-item;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 150px;
-    background-color: rgba(36,36,36, 0.8);
-    height: 100%; /* Full height */
-    position: fixed; /* Make it stick, even on scroll */
-    overflow: none; /* Enable scrolling if the sidenav has too much content*/
+    body {
+        background-image: url("/img/background.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
     
-}
-.navbar-header{
-    width: 120px;
-
-}
-.navbar-header img{
-    width: 50px;
-}
-.navbar-header img:hover{
-	transform: translateX(150px);
-} 
-.navbar-header img{
-	transition: 7s;
-} 
-
-.nav>li>a{
-    color:white;
-    font-family: sans-serif;
-    font-size: bold;
-    text-align: center;
-}
-
-.addWalkersField{
-    margin:20px;
-}
-
-.list-group-item{
-    display: inline-flex;
-    background-color: rgba(36,36,36, 0.8); 
-    width: 250px;
-    height: 400px;
-    margin: 10px;
-    border-radius: 5px 5px 5px 5px;
-    text-align: center;
-    padding: 15px;
-}
-
-.modal-content{
-    background-color: rgba(36,36,36, 0.8); 
-    width: 300px;
-    height: 450px;
-    margin: 10px;
-    border-radius: 5px 5px 5px 5px;
-    text-align: center;
-    padding: 15px;  
-    border: solid 1px;
-}
-.modal-dialog{
-    width: 300px;
-   
-}
-#preview{
-    height: 100px;
-    margin: 10px;
-}
-.imgAdd{
-    height: 190px;
-    margin: 10px;
-}
-   
-.form-control{
-    width: 190px;
-    background-color: rgba(36,36,36, 0.8);
-    color: white;
+    #wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by its height */
+        margin: 0 auto -60px;
+        /* Pad bottom by footer height */
+        padding: 0 0 60px;
+        left: 0px;
+    }
+    /* Custom page CSS
+-------------------------------------------------- */
+    /* Not required for template or sticky footer method. */
     
-}
-
-/*
-.form-inline{
-    background-color: rgba(36,36,36, 0.8); 
-    padding: 0 auto;
-    position: absolute;
-}
-*/
-
-
-/*
-    border-radius: 5px 10px 10px 5px;
-    padding: 20px;
-    color: white;
-*/
-
-
-}
-.form-inline {
-    background-color: rgba(36, 36, 36, 0.8);
-    padding: 0 auto;
-    position: absolute;
-}
-#kml-zone {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-#kml-map {
-    height: 100%;
-}
-
-.bodycontainer {
-
-    width: 1100px;
-    height: 100%;
-    margin-left: 180px;
-}
-
-.historycontainer {
-    background-color: rgba(36, 36, 36, 0.8);
-    width: 50%;
-    border-radius: 5px 10px 10px 5px;
-    padding: 20px;
-    color: white;
-    display: block;
-    float: right;
-    padding: 40px;
-    overflow: none;
-
-}
+    #wrap > .container {
+        padding: 60px 0px 0;
+    }
     
-.row{
-    width:300px;
-    margin: none;
-        
-}
+    .container {
+        padding-left: -15px;
+    }
     
-#weather{
-    width:900px; 
-    display:inline-block; 
-    text-align:center;
-    color : black;
-}
-#weather td{
-    width:20%
-}
-#kml-zone-map {
-    height: 600px;
-}
-.addSomething {
-    margin-left: 180px;
-    ;
-}
-.bip {
-    text-align: center;
-}
+    .navigationSlide {
+        width: 250px;
+    }
+    
+    .container .credit {
+        margin: 20px 0;
+    }
+    
+    #navbar {
+        width: 251.5px;
+        left: -1800px;
+        background: rgba(255, 255, 255, 0);
+        border: none;
+    }
+    
+    #navbar.affix-top {
+        position: fixed;
+        left: 0px;
+        -webkit-transition: all 7s ease;
+    }
+    
+    #navbar.affix {
+        position: fixed;
+        top: 0;
+        bottom: 60;
+        -webkit-transition: all 5s ease;
+    }
+    
+    .nav-content {
+        padding: 10%;
+    }
+    
+    .navbar {
+        float: left;
+        display: list-item;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        /* Full height */
+        position: fixed;
+        /* Make it stick, even on scroll */
+        overflow: none;
+        /* Enable scrolling if the sidenav has too much content*/
+    }
+    
+    .navbar-default .navbar-nav>.active>a,
+    .navbar-default .navbar-nav>.active>a:focus {
+        background-color: rgba(178, 99, 44, 0.8);
+    }
+    
+    .navbar-header {
+        width: 120px;
+    }
+    
+    .navbar-header img {
+        width: 50px;
+    }
+    
+    .navbar-header img:hover {
+        transform: translateX(150px);
+    }
+    
+    .navbar-header img {
+        transition: 7s;
+    }
+    
+    .nav>li {
+        margin-left: -30px;
+        width: 250px;
+        transition: 0.4s ease;
+    }
+    
+    .nav>li>a {
+        width: 250px;
+        height: 230px;
+        color: white !important;
+        font-family: 'Bangers', cursive;
+        font-size: bold;
+        text-align: center;
+        box-shadow: 0px 0px 3px black;
+        margin-left: -0px;
+        padding-top: 100px;
+        padding-right: 10px !important;
+        font-size: 2.4em;
+        text-shadow: 0px 0px 5px black;
+        transition: 0.4s ease;
+    }
+    
+    .nav>li>a:hover {
+        box-shadow: none;
+    }
+    
+    .nav>li>a:hover + .radi {
+        border-radius: 0px 10px 10px 0px;
+    }
+    
+    .nav>li:nth-child(2) {
+        background-color: rgba(178, 99, 44, 0.8);
+    }
+    
+    .nav>li:nth-child(3) {
+        background-color: rgba(255, 120, 25, 0.8);
+    }
+    
+    .nav>li:nth-child(4) {
+        background-color: rgba(255, 105, 0, 0.8);
+    }
+    
+    .nav>li:hover:nth-child(2) {
+        background-color: rgba(178, 99, 44, 0);
+        transform: scale(1.5);
+    }
+    
+    .nav>li:hover:nth-child(3) {
+        background-color: rgba(255, 120, 25, 0);
+        transform: scale(1.5);
+    }
+    
+    .nav>li:hover:nth-child(4) {
+        background-color: rgba(255, 105, 0, 0);
+        transform: scale(1.5);
+    }
+    
+    .bodycontainer {
+        overflow-x: hidden;
+    }
+    /*
+.bodycontainer.affix-top {
+    position: fixed;
+    left: 0px;
+    -webkit-transition: all 5.8s ease;
+}*/
+    
+    .welcome {
+        margin-top: 300px;
+        margin-left: 220px;
+        white-space: nowrap;
+        opacity: 0;
+        animation-fill-mode: forwards;
+        -webkit-animation-name: appear;
+        /* Chrome, Safari, Opera */
+        -webkit-animation-duration: 8.9s;
+    }
+    
+    .heart {
+        width: 20px;
+        position: absolute;
+        margin-top: 80px;
+        margin-left: 1040px;
+        animation-fill-mode: forwards;
+        -webkit-animation-name: heart;
+        /* Chrome, Safari, Opera */
+        -webkit-animation-duration: 17s;
+    }
+    
+    h1 {
+        box-shadow: 0 -5px 10px -5px green;
+        border-radius: 5px 5px 5px 5px;
+        padding: 20px;
+        padding-top: 10px;
+        width: 730px;
+        color: white;
+        text-shadow: 0px 0px 3px black;
+        font-size: 5em;
+    }
+    
+    .logo {
+        position: absolute;
+        margin-bottom: -20px;
+        width: 45px;
+        animation-fill-mode: forwards;
+        -webkit-animation-name: littleMan;
+        /* Chrome, Safari, Opera */
+        -webkit-animation-duration: 17s;
+    }
+    
+    .logo2 {
+        margin-bottom: -20px;
+        width: 45px;
+        animation-fill-mode: forwards;
+        -webkit-animation-name: littleMan2;
+        /* Chrome, Safari, Opera */
+        -webkit-animation-duration: 17s;
+    }
+    
+    .presentation {
+        margin-left: 420px;
+        margin-top: 20px;
+        color: white;
+        font-size: 1.3em;
+        text-shadow: 0px 0px 2px black;
+        animation-fill-mode: forwards;
+        -webkit-animation-name: appear2;
+        /* Chrome, Safari, Opera */
+        -webkit-animation-duration: 11s;
+    }
+    
+    .Three {
+        margin-left: 250px;
+        margin-top: 30px;
+        font-weight: bold;
+    }
+    
+    .hiking {
+        margin-left: 420px;
+        margin-top: 30px;
+        color: white;
+        font-size: 1.3em;
+        text-shadow: 0px 0px 2px black;
+        animation-fill-mode: forwards;
+        -webkit-animation-name: appear3;
+        /* Chrome, Safari, Opera */
+        -webkit-animation-duration: 13s;
+    }
+    
+    .friends {
+        margin-left: 405px;
+        margin-top: 30px;
+        color: white;
+        font-size: 1.3em;
+        text-shadow: 0px 0px 2px black;
+        animation-fill-mode: forwards;
+        -webkit-animation-name: appear4;
+        /* Chrome, Safari, Opera */
+        -webkit-animation-duration: 15s;
+    }
+    
+    .both {
+        margin-left: 400px;
+        margin-top: 30px;
+        color: white;
+        font-size: 1.7em;
+        text-shadow: 0px 0px 2px black;
+        animation-fill-mode: forwards;
+        -webkit-animation-name: appear5;
+        /* Chrome, Safari, Opera */
+        -webkit-animation-duration: 17s;
+    }
+    
+    .hikColor {
+        animation-fill-mode: forwards;
+        -webkit-animation-name: color;
+        /* Chrome, Safari, Opera */
+        -webkit-animation-duration: 18s;
+    }
+    
+    .appName {
+        text-shadow: 0px 0px 20px yellow, 0px 0px 25px orange, 0px 0px 30px red, 0px 0px 2px black;
+        font-weight: bold;
+        animation-fill-mode: forwards;
+        -webkit-animation-name: color3;
+        /* Chrome, Safari, Opera */
+        -webkit-animation-duration: 18s;
+    }
+    
+    .friendColor {
+        animation-fill-mode: forwards;
+        -webkit-animation-name: color2;
+        /* Chrome, Safari, Opera */
+        -webkit-animation-duration: 18s;
+    }
+    /* Chrome, Safari, Opera */
+    
+    @-webkit-keyframes appear {
+        0% {
+            opacity: 0;
+            margin-top: 300px;
+        }
+        25% {
+            opacity: 1;
+            margin-top: 300px;
+        }
+        50% {
+            opacity: 1;
+            margin-left: 220px;
+            margin-top: 300px;
+        }
+        75% {
+            opacity: 1;
+            margin-left: 320px;
+            margin-top: 300px;
+        }
+        100% {
+            opacity: 1;
+            margin-left: 320px;
+            margin-top: 100px;
+        }
+    }
+    
+    @-webkit-keyframes littleMan {
+        0% {
+            margin-left: 0px;
+            transform: rotateY(0deg) translateY(0px);
+        }
+        30% {
+            margin-left: 150px;
+            transform: rotateY(0deg) translateY(0px);
+        }
+        35% {
+            margin-left: 150px;
+            transform: rotateY(180deg) translateY(0px);
+        }
+        40% {
+            margin-left: 150px;
+            transform: rotateY(180deg) translateY(0px);
+        }
+        41% {
+            margin-left: 150px;
+            transform: rotateY(180deg) translateY(-10px);
+        }
+        45% {
+            margin-left: 150px;
+            transform: rotateY(180deg) translateY(0px);
+        }
+        49% {
+            margin-left: 150px;
+            transform: rotateY(180deg) translateY(0px);
+        }
+        50% {
+            margin-left: 150px;
+            transform: rotateY(0deg) translateY(0px);
+        }
+        95% {
+            margin-left: 695px;
+            transform: rotateY(0deg) translateY(0px);
+        }
+        100% {
+            margin-left: 705px;
+            transform: rotateY(180deg) translateY(0px);
+        }
+    }
+    
+    @-webkit-keyframes littleMan2 {
+        0% {
+            margin-left: 0px;
+            transform: translateY(0px);
+        }
+        45% {
+            margin-left: 0px;
+            transform: translateY(0px);
+        }
+        100% {
+            margin-left: 680px;
+            transform: translateY(0px);
+        }
+    }
+    
+    @-webkit-keyframes heart {
+        0% {
+            opacity: 0;
+            transform: translateY(0px);
+        }
+        97% {
+            opacity: 0;
+            transform: translateY(0px);
+        }
+        100% {
+            opacity: 1;
+            transform: translateY(-7px);
+        }
+    }
+    
+    @-webkit-keyframes appear2 {
+        0% {
+            opacity: 0;
+        }
+        25% {
+            opacity: 0;
+        }
+        50% {
+            opacity: 0;
+        }
+        75% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+    
+    @-webkit-keyframes appear3 {
+        0% {
+            opacity: 0;
+        }
+        25% {
+            opacity: 0;
+        }
+        50% {
+            opacity: 0;
+        }
+        75% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+    
+    @-webkit-keyframes appear4 {
+        0% {
+            opacity: 0;
+        }
+        25% {
+            opacity: 0;
+        }
+        50% {
+            opacity: 0;
+        }
+        75% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+    
+    @-webkit-keyframes appear5 {
+        0% {
+            opacity: 0;
+        }
+        25% {
+            opacity: 0;
+        }
+        50% {
+            opacity: 0;
+        }
+        75% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+    
+    @-webkit-keyframes color {
+        0% {
+            color: white;
+        }
+        80% {
+            color: white;
+        }
+        100% {
+            color: red;
+        }
+    }
+    
+    @-webkit-keyframes color2 {
+        0% {
+            color: white;
+        }
+        80% {
+            color: white;
+        }
+        100% {
+            color: yellow;
+        }
+    }
+    
+    @-webkit-keyframes color3 {
+        0% {
+            transform: scale(1);
+        }
+        100% {
+            transform: scale(5);
+        }
+    }
+    /* Add circuit button */
+    
+    .adding {
+        margin-left: 55%;
+        margin-top: 5%;
+    }
+    
+    .list-group {
+        width: 100%;
+        text-align: center;
+        margin-top: 50px;
+    }
+    
+    .list-group-item {
+        text-align: center;
+        margin-left: 50%;
+        width: 250px;
+        height: 300px;
+    }
