--- a/public/views/history.html
+++ b/public/views/history.html
@@ -1,57 +1,54 @@
-
-<h1 style="margin-left: 180px;">{{title}}</h1>
-<!-- Bouton ajout de soirée -->
-<div style="margin-left: 180px;" class="addPlatField col-md-6">
-
-    <button type="button" class="btn btn-info btn-lg modal-add-btn" data-toggle="modal" data-target="#myModal">Ajouter</button>
+<div class="adding">
+    <div class="addSomething">
+        <button type="button" class="btn btn-info btn-lg modal-add-btn" data-toggle="modal" data-target="#myModal">Add an event !</button>
+    </div>
 </div>
 
 
-
-<div style="margin-left: 180px;" class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Ajouter une rando</h4>
+<div style="margin-left: 180px; " class="modal fade " id="myModal " role="dialog ">
+    <div class="modal-dialog modal-lg ">
+        <div class="modal-content ">
+            <div class="modal-header ">
+                <button type="button " class="close " data-dismiss="modal ">&times;</button>
+                <h4 class="modal-title ">Ajouter une rando</h4>
             </div>
-            <div class="modal-body" ng-if="i==1">
-                <div class="row">
-                    <select ng-model="id_circuit" class="form-control">
-                        <option ng-repeat="circuit in circuits" value="{{circuit._id}}">
+            <div class="modal-body " ng-if="i==1 ">
+                <div class="row ">
+                    <select ng-model="id_circuit " class="form-control ">
+                        <option ng-repeat="circuit in circuits " value="{{circuit._id}} ">
                             {{circuit.name}}
                         </option>
                     </select>
                 </div>
             </div>
-            <div class="modal-body" ng-if="i==2">
-                <div class="row">
-                    <select ng-model="histowalker" class="form-control">
-                        <option ng-repeat="walker in walkers" value="{{walker._id}}">
+            <div class="modal-body " ng-if="i==2 ">
+                <div class="row ">
+                    <select ng-model="histowalker " class="form-control ">
+                        <option ng-repeat="walker in walkers " value="{{walker._id}} ">
                             {{walker.name}}
                         </option>
                     </select>
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="submit" class="btn btn-default recetteButton" ng-click="add()" style="float:right;">Valider</button>
-                <button class="btn btn-danger" ng-click="precedent(i)" style="float:right;" ng-hide="i==1">Précédent</button>
-                <button class="btn btn-default addbutton1" ng-click="suivant(i)" style="float:right;" ng-hide="i==2">Suivant</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal" style="float:right;">Annuler</button>
+            <div class="modal-footer ">
+                <button type="submit " class="btn btn-default recetteButton " ng-click="add() " style="float:right; ">Valider</button>
+                <button class="btn btn-danger " ng-click="precedent(i) " style="float:right; " ng-hide="i==1 ">Précédent</button>
+                <button class="btn btn-default addbutton1 " ng-click="suivant(i) " style="float:right; " ng-hide="i==2 ">Suivant</button>
+                <button type="button " class="btn btn-danger " data-dismiss="modal " style="float:right; ">Annuler</button>
             </div>
         </div>
     </div>
 </div>
 
-<ul class="list-group">
-    <li class="list-group-item" ng-repeat="circuit in circuits">
-        <form class="form-inline">
-            <div class="form-group">
-                <input type="text" class="form-control" id="name" ng-model="circuit.name">
+<ul class="list-group ">
+    <li class="list-group-item " ng-repeat="circuit in circuits ">
+        <form class="form-inline ">
+            <div class="form-group ">
+                <input type="text " class="form-control " id="name " ng-model="circuit.name ">
             </div>
-            <div class="pull-right">
-                <button type="submit" class="btn btn-default" ng-click="update(circuit)">Update</button>
-                <button type="submit" class="btn btn-danger" ng-click="delete(circuit)">Delete</button>
+            <div class="pull-right ">
+                <button type="submit " class="btn btn-default " ng-click="update(circuit) ">Update</button>
+                <button type="submit " class="btn btn-danger " ng-click="delete(circuit) ">Delete</button>
             </div>
         </form>
     </li>
